[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Thanasis Georgiou <contact@thgeorgiou.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
ipython = "^8.7.0"
ipykernel = "^6.17.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
